--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +11,7 @@
       href="./assets/img/vk-favicon.png"
       type="image/x-icon" 
     />
-    
+    <link rel="stylesheet" href="./assets/css/dark-light-toggle.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     
     <link
@@ -27,7 +28,7 @@
     <div class="theme-picker">
       <input type="color" id="theme" title="select color theme" />
     </div>
-  
+
     <header>
       <div>
         <a href="./index.html"
@@ -54,7 +55,7 @@
         </div>
         <div>
           <a
-            href="https://app.luminpdf.com/viewer/6594f61088628e8afeb42edd"
+            href="https://drive.google.com/file/d/1AXMSCcnUPpbX7vjC3gh4HPc7LPBBum8Z/view?usp=sharing"
             target="_blank"
             ><button>Download Resume</button></a
           >
