--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div>
           <a
-            href="https://drive.google.com/file/d/1sGwMC5mGee-7wgbY4syY4Xgzgf2ehGB3/view?usp=sharing"
+            href="https://drive.google.com/file/d/1jWK_6tvc9i78kG9Ppq8oDzlbD6OJ1hWr/view?usp=sharing"
             target="_blank"
             ><button>Download Resume</button></a
           >
@@ -109,20 +109,22 @@
             <i class="fa-solid fa-users"></i>
             <h4>JobSeeking Application</h4>
             <p>Build using Reactjs,MongoDb,<br>Nodejs</p>
-            <a href="https://github.com/VaibhavKubde121/Job_Seeking_Application" target="_blank"
+            <a  href="https://github.com/VaibhavKubde121/Job_Seeking_Application" target="_blank"
               >view demo</a
             >
           </div>
           <div class="service-card">
-            <i class="fa-brands fa-rocketchat"></i>
-            <h4>Chat Application</h4>
-            <p>Build using Reactjs,Nodejs,<br>MongoDB,Socket-io</p>
-            <a href="https://github.com/VaibhavKubde121/CHAT_APPLICATION" target="_blank">view demo</a>
+            <i class="fa-solid fa-chalkboard-user"></i>
+            <h4>Mentor-Mentee Management System</h4>
+            <p>Build using Java,Servlet,Jdbc,
+              <br>Html,Css,Javascipt<br>,bootstrap,Sql
+            </p>
+            <a  href="https://github.com/VaibhavKubde121/CHAT_APPLICATION" target="_blank">view demo</a>
           </div>
           <div class="service-card">
-            <i class="fa-solid fa-money-bill"></i>
-            <h4>CryptoCurrency Application</h4>
-            <p>Build using Reactjs,Nodejs,<br>Context Fetch Api</p>
+            <i class="fa-solid fa-bowl-food"></i>
+            <h4>Food Website</h4>
+            <p>Build using Reactjs,Tailwind Css<br>Context Fetch Food Api</p>
             <a href="https://65c1465b3de997176fdee379--luxury-blini-baf443.netlify.app/" target="_blank"
               >view demo</a
             >
@@ -140,7 +142,7 @@
       
      <section class="about-section" id="about">
         <div class="img-div">
-          <img src="./assets/img/Profile_Backgound_Remove.png" alt="vasanthkumar image" />
+          <img src="./assets/img/Profile_Backgound_Remove.png" alt="vaibhav image" />
         </div>
         <div>
           <ol>
@@ -149,7 +151,7 @@
                 I'm a <span class="blue-span">FullStack Developer</span>   
               </h1>
             </li>
-            <li><strong>Expirence : </strong>Starter</li>
+            <li><strong>Expirence : </strong>Fresher</li>
             <li>
               <strong>Who I'm : </strong> FullStack Developer
             </li>
@@ -173,69 +175,52 @@
         </div>
       </section>
 
-      <section class="service-section skill-section" id="skills">
-        <h1>My <span class="blue-span">Skills</span></h1>
-        <div class="service-cards-container skill-cards-container" style="text-align: center;">
-          <div class="service-card">
-            <!-- <i class="fa-brands fa-html5"></i> -->
-            <img src="./assets/img/html.png" alt="" 
-            style="border-radius: 20px; width: 200px;" >
+  <section class="skill-section" id="skills">
+    <h1>My <span class="blue-span">Skills</span></h1>
+    <div class="skill-cards-container" >
+        <div class="skill-card">
+            <img src="./assets/img/html.png" alt="HTML">
             <h4>Html</h4>
-          </div>
-          <div class="service-card">
-            <!-- <i class="fa-brands fa-js"></i> -->
-            <img src="./assets/img/css-removebg-preview.png" alt="" style="border-radius: 20px; width: 200px; height: 100px;">
-            <h4>css</h4>
-          </div>
-          <div class="service-card">
-            <!-- <i class="fa-brands fa-js"></i> -->
-            <img src="./assets/img/javascript.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>javaScript</h4>
-          </div>
-          <div class="service-card" >
-            <!-- <i class="fa-brands fa-react"></i> -->
-            <img src="./assets/img/reactjs.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/css-removebg-preview.png" alt="CSS">
+            <h4>CSS</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/javascript.png" alt="JavaScript">
+            <h4>JavaScript</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/reactjs.png" alt="ReactJs">
             <h4>ReactJs</h4>
-          </div>
-          <div class="service-card" >
-            <!-- <i class="fa-brands fa-bootstrap"></i> -->
-            <img src="./assets/img/bootstrap-removebg-preview.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>BootStrap</h4>
-          </div>
-          <div class="service-card" >
-            <!-- <i class="fa-brands fa-css3-alt"></i> -->
-            <img src="./assets/img/tailwind.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>tailWind Css</h4>
-          </div>
         </div>
-        <div class="service-cards-container" style="text-align: center;">
-          <div class="service-card" >
-            <!-- <i class="fa-brands fa-node-js"></i> -->
-            <img src="./assets/img/nodejs.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
+        <div class="skill-card">
+            <img src="./assets/img/bootstrap-removebg-preview.png" alt="Bootstrap">
+            <h4>Bootstrap</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/tailwind.png" alt="Tailwind CSS">
+            <h4>Tailwind CSS</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/nodejs.png" alt="NodeJs">
             <h4>NodeJs</h4>
-          </div>
-          <div class="service-card" >
-            <!-- <i class="fa-solid fa-database"></i> -->
-            <img src="./assets/img/mysql.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>MySql</h4>
-          </div>
-          <div class="service-card" >
-            <!-- <i class="fa-sharp fa-solid fa-database"></i> -->
-            <img src="./assets/img/mongodb.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>MongoDB</h4>
-          </div>
-          <div class="service-card">
-            <!-- <i class="fa-sharp fa-solid fa-database"></i> -->
-            <img src="./assets/img/java.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>Java</h4>
-          </div>
-
-          <div class="service-card" >
-            <img src="./assets/img/springboot.png" alt="" style="border-radius: 20px; width: 200px;height: 100px;">
-            <h4>Spring Boot</h4>
-          </div>
         </div>
-      </section>
+        <div class="skill-card">
+            <img src="./assets/img/mysql.png" alt="MySql">
+            <h4>MySql</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/mongodb.png" alt="MongoDB">
+            <h4>MongoDB</h4>
+        </div>
+        <div class="skill-card">
+            <img src="./assets/img/java.png" alt="Java">
+            <h4>Java</h4>
+        </div>
+    </div>
+</section>
+
 
 
       <section class="contact-section" id="contact">
@@ -308,7 +293,7 @@
             setTimeout(function() {
                 document.getElementById('response').innerText = '';
                 document.getElementById('response').className = '';
-            }, 5000); // Remove message after 5 seconds
+            }, 2000); // Remove message after 5 seconds
         }
 
 
