github link changes

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
             <p>Build using Java,Servlet,Jdbc,
               <br>Html,Css,Javascipt<br>,bootstrap,Sql
             </p>
-            <a  href="https://github.com/VaibhavKubde121/CHAT_APPLICATION" target="_blank">view demo</a>
+            <a  href="https://github.com/VaibhavKubde121/DBMS_Project" target="_blank">view demo</a>
           </div>
           <div class="service-card">
             <i class="fa-solid fa-bowl-food"></i>
             <h4>Food Website</h4>
             <p>Build using Reactjs,Tailwind Css<br>Context Fetch Food Api</p>
-            <a href="https://65c1465b3de997176fdee379--luxury-blini-baf443.netlify.app/" target="_blank"
+            <a href="https://github.com/VaibhavKubde121/Food-Website" target="_blank"
               >view demo</a
             >
           </div>
